--- a/home.html
+++ b/home.html
@@ -10,6 +10,12 @@
 	<title>Formulario de entrada</title>
 </head>
 <body>
+	<a href="./usuarios.html">
+		<button>
+			Ver usuarios conectados
+		</button>
+	</a>
+
 	<form id="formulario">
 		<h2>Datos de la empresa</h2>
 		<label for="nombre-empresa">Nombre de empresa:</label>
@@ -89,10 +95,13 @@
 
 	 <div id="empresasguardadas"> Nombres de Emprsas Guardas</div>
 	 
-	 
-	 
+	 <script src="https://code.jquery.com/jquery-3.6.4.min.js">
+		
+	 </script>
+		 
 	 <script  src="scripts.js"> </script>
- 
+
+	
 </body>
 
 
