--- a/registro.html
+++ b/registro.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logeo</title>
+    <script src="https://unpkg.com/check-password-strength/dist/umd.js">
+        console.log(passwordStrength)
+    </script>
 </head>
 <body>
 <h2>Registrarse </h2>
@@ -17,6 +20,7 @@
 <a href="index.html">Logearse</a>
 
 <script src="registro.js"></script>
+
 </body>
 
 </html>
